# python-mal-2025

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  chainguard_python.Dockerfile  justfile  pyproject.toml  ruff.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  ci.yml
